--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -28,7 +28,7 @@ jobs:
     - run: npm test
 
     - name: Publish
-      run: npm publish
+    - run: npm publish
     - env:
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
