--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -9,7 +9,8 @@ on:
 
 jobs:
   build-and-deploy:
-
+    env:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -27,8 +28,6 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     - name: Publish
-    - env:
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     - run: npm publish
 
     
