--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "lib": [
         "es2018",
         "dom"
-      ]
+      ],
+      "declaration": true
     },
     "include": ["./src/**/*"]
   }
